Handle invalid facets in url params in a user-friendly way (#360)
